# hypercast

./: .clang-tidy  .eslintrc.js  .gitignore  .gitlab-ci.yml  .gitmodules  .yarnrc.yml  CMakeLists.txt  COPYRIGHT  LICENSE.txt  README.md  cra-build-helper.sh  eslintrc-template.js  js.cmake  package.json  package.sh  packageArchive.sh  tsconfig.json
.github/workflows/: build_and_test.yml
client/: .eslintrc.js  build.sh  liveStreamExample.html  mse.html  package.json  tsconfig.json  webpack.config.js
client/src/: BufferCtrl.ts  Debug.ts  Deinterleave.ts  Dom.ts  EventDispatcher.ts  Events.ts  Main.ts  MediaSource.ts  MseWrapper.ts  Player.ts  SegmentDownloader.ts  Stream.ts  Util.ts  bufferctrl.ts  debug.ts  deinterleave.ts  index.ts  main.ts  manifest.ts  stream.ts  util.ts
common/: .eslintrc.js  package.json  tsconfig.json
demo-client/: .eslintrc.js  app.ts  config-overrides.js  globals.d.ts  index.html  package.json  tsconfig.json  webpack.config.js
dev-client/: .eslintrc.js  app.ts  debug.ts  globals.d.ts  index.html  package.json  tsconfig.json  webpack.config.js
docker/: README.md  RiseDockerContainer.md  mkDockerImg.sh
docs/: CDNRequirements.md  Cloudflare.md  CloudflareTunnel.md  README.md  ServerConfiguration.md  build.sh  typedoc.js
ffmpeg-tools/: CMakeLists.txt  build-ffmpeg
interjection-tools/: CMakeLists.txt  README.md  encode-interjection  generate-interjection-set-metadata  set-interjection-metadata
js/: .gitignore  CMakeLists.txt  package.json
js/client/src/: Main.ts
js/common/: package.json
js/common/test/: Assertion.ts
js/demo-client/: tsconfig.json
js/dev-client/: app.ts  debug.ts  webpack.config.js
js/docs/: Client.md  build.sh
js/docs/private/: Javascript.md
js/server/: .eslintrc.js  package.json  tsconfig.json
js/server/src/: FilesystemFileStore.ts  ServerFileStore.ts
js/server/src/Config/: Config.ts  Default.ts
js/server/test/: Ffmpeg.ts  tsconfig.json
private_docs/: Configuration.md  ConfigurationMultichannel.md  Development.md  Latency.md  Production.md  README.md
server/: .eslintrc.js  CMakeLists.txt  Doxyfile.suffix  main.cpp  package.json  tsconfig.json  webpack.config.js
server/docs/: README.md
server/docs/configuration/: Fields.md  README.md
server/src/: Assertion.ts  CMakeLists.txt  Config.ts  Ffmpeg.ts  FilesystemFileStore.ts  Log.ts  Main.ts  MinimumInterleaveRate.ts  ServerFileStore.ts  VideoServer.ts  main.cpp  main.ts
server/src/Config/: Config.ts  Default.ts  Spec.ts
server/src/api/: ConfigResource.cpp  ConfigResource.h  FullConfigResource.cpp  FullConfigResource.hpp  ProbeResource.cpp  ProbeResource.hpp
server/src/api/channel/: BlankResource.cpp  BlankResource.hpp  InterjectionResource.cpp  InterjectionResource.hpp  SendDataResource.cpp  SendDataResource.hpp
server/src/configuration/: configuration.hpp  defaults.hpp  operators.cpp  parse.cpp  unparse.cpp  validate.cpp
server/src/configuration/defaults/: compute.cpp  defaults.cpp  latency.cpp  quality.cpp  source.cpp
server/src/dash/: ControlChunkType.hpp  DashResources.cpp  DashResources.hpp  InterleaveResource.cpp  InterleaveResource.hpp  LiveInfo.cpp  SegmentIndexDescriptorResource.cpp  SegmentIndexDescriptorResource.hpp  SegmentResource.cpp  SegmentResource.hpp
server/src/ffmpeg/: Arguments.cpp  Arguments.hpp  Exceptions.cpp  Exceptions.hpp  ProbeCache.cpp  ProbeCache.hpp  Process.cpp  Process.hpp  Timestamp.hpp  arguments.cpp  ffmpeg.cpp  ffmpeg.hpp  ffprobe.cpp  ffprobe.hpp  log.cpp  log.hpp  process.cpp  zmqsend.cpp  zmqsend.hpp
server/src/instance/: ChannelsIndexResource.cpp  ChannelsIndexResource.hpp  State.cpp  State.hpp
server/src/log/: FileLog.cpp  FileLog.hpp  Item.cpp  Item.hpp  Level.hpp  Log.cpp  Log.hpp  MemoryLog.cpp  MemoryLog.hpp
server/src/media/: AudioCodecInfo.cpp  AudioCodecInfo.hpp  MediaInfo.hpp  codec.hpp
server/src/resources/: ConstantResource.cpp  ConstantResource.hpp  ErrorResource.cpp  ErrorResource.hpp  FilesystemResource.cpp  FilesystemResource.hpp  PutResource.cpp  PutResource.hpp  StreamAndHeadResource.cpp  StreamAndHeadResource.hpp
server/src/server/: Address.cpp  Address.hpp  CacheKind.hpp  Error.hpp  HttpServer.cpp  HttpServer.hpp  Path.cpp  Path.hpp  Request.cpp  Request.hpp  Resource.cpp  Resource.hpp  Response.cpp  Response.hpp  Server.cpp  Server.hpp  ServerState.cpp  ServerState.h  SynchronousResource.cpp  SynchronousResource.hpp
server/src/util/: Event.cpp  Event.hpp  File.cpp  File.hpp  Mutex.cpp  Mutex.hpp  RaiiFn.hpp  asio.cpp  asio.hpp  awaitable.hpp  debug.hpp  json.cpp  json.hpp  subprocess.cpp  subprocess.hpp  util.cpp  util.hpp
server/test/: CMakeLists.txt  Config.ts  Ffmpeg.ts  Interleave.ts  jest.config.js
server/test/common/: CMakeLists.txt  log.cpp  log.hpp
server/test/http_server/: CMakeLists.txt  main.cpp
server/test/unit/: CMakeLists.txt  coro_test.cpp  coro_test.hpp  data.cpp  data.hpp  main.cpp
server/test/unit/api/: ProbeResource.cpp
server/test/unit/configuration/: comparisons.cpp
server/test/unit/configuration/defaults/: TestImpl.cpp  TestImpl.hpp  ffprobe.cpp  fps.cpp  ingest.cpp  optional.cpp  quality.cpp
server/test/unit/dash/: InterleaveResource.cpp  LiveInfo.cpp
server/test/unit/ffmpeg/: Arguments.cpp  ArgumentsDecodeUrl.cpp  ArgumentsIngest.cpp  ArgumentsLiveStream.cpp  ArgumentsTestImpl.cpp  ArgumentsTestImpl.hpp  ProbeCache.cpp  Timestamp.cpp  arguments.cpp  ffprobe.cpp  log.cpp
server/test/unit/instance/: ChannelsIndexResource.cpp
server/test/unit/log/: FileLog.cpp  Item.cpp  Log.cpp  LogTests.cpp  LogTests.hpp  MemoryLog.cpp
server/test/unit/resources/: ConstantResource.cpp  ErrorResource.cpp  FilesystemResource.cpp  PutResource.cpp  StreamAndHeadResource.cpp  TestResource.cpp  TestResource.hpp
server/test/unit/server/: Address.cpp  HttpServer.cpp  Path.cpp  Server.cpp  TestServer.cpp  TestServer.hpp
server/test/unit/util/: Event.cpp  File.cpp  RaiiFn.cpp  Subprocess.cpp  SubprocessGetStdout.cpp  parseInt64.cpp  replaceAll.cpp  split.cpp
settings-ui/: .eslintrc.js  config-overrides.js  package.json  tsconfig.json
(+123 files in other folders)
